force-app/main/default/objects/Fee__c/fields/Fee_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Fee_Effective_From__c</fullName>
    <label>Fee Effective From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>