force-app/main/default/objects/Fee__c/fields/Fee_ID__c.field-meta.xml
<CustomField>
    <fullName>Fee_ID__c</fullName>
    <displayFormat>F-{0000}</displayFormat>
    <label>Fee ID</label>
    <type>AutoNumber</type>
</CustomField>