force-app/main/default/objects/Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician Fee</fullName>
            </value>
            <value>
                <fullName>Billing Fee</fullName>
            </value>
            <value>
                <fullName>Filing Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>