force-app/main/default/objects/Fee__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>Program_Priority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>