force-app/main/default/objects/Fee__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>