force-app/main/default/objects/Fee__c/fields/Program_Priority__c.field-meta.xml
<CustomField>
    <fullName>Program_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Priority</label>
    <referenceTo>Program_Priority__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>