force-app/main/default/objects/Fee__c/fields/Program_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Review_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Review Type</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>