force-app/main/default/objects/Fee__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <formula>Program_Priority__r.Program_Review_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Type</label>
    <type>Text</type>
</CustomField>