force-app/main/default/objects/Fee__c/validationRules/Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Fee_Effective_From__c  &gt;  Fee_Effective_To__c</errorConditionFormula>
    <errorMessage>&apos;Fee Effective From&apos; cannot be greater than &apos;Fee Effective To&apos;</errorMessage>
</ValidationRule>